--- a/Public/user/domestic-transfer.html
+++ b/Public/user/domestic-transfer.html
@@ -544,15 +544,15 @@
                                                     <div class="input-group">
                                                         <select name="acct_type" class='selectpicker' data-width='100%' required>
                                                             <option value="">Select Account Type</option>
+                                                            <option value="">Select Account Type</option>
                                                             <option value="Savings">Savings Account</option>
                                                             <option value="Current">Current Account</option>
                                                             <option value="Checking">Checking Account</option>
-                                                            <option value="Fixed Deposit">Fixed Deposit</option>
-                                                            <option value="Non Resident">Non Resident Account</option>
+                                                            <option value="Fixed">Fixed Deposit</option>
+                                                            <option value="NonResident">NonResident Account</option>
                                                             <option value="Online Banking">Online Banking</option>
-                                                            <option value="Domicilary Account">Domicilary Account</option>
-                                                            <option value="Joint Account">Joint Account</option>                                                        </select>
-
+                                                            <option value="Domicilary">Domicilary Account</option>
+                                                            <option value="Joint">Joint Account</option>
                                                     </div>
                                                 </div>
 
