--- a/Public/user/domestic-transfer.html
+++ b/Public/user/domestic-transfer.html
@@ -529,14 +529,6 @@
                                             </div>
                                         </div>
 
-
-
-                                        <div class="row">
-                                            <div class="col-md-6">
-
-                                            </div>
-                                        </div>
-
                                         <div class="row">
                                             <div class="col-md-6">
                                                 <div class="form-group mb-4 mt-4">
@@ -553,9 +545,11 @@
                                                             <option value="Online Banking">Online Banking</option>
                                                             <option value="Domicilary">Domicilary Account</option>
                                                             <option value="Joint">Joint Account</option>
+                                                        </select>
                                                     </div>
                                                 </div>
 
+                                                
                                             </div>
                                             <div class="col-md-6">
                                                 <div class="form-group mb-4 mt-4">
@@ -564,7 +558,7 @@
                                                         <textarea class="form-control mb-4" rows="3" id="textarea-copy" placeholder="Fund Description" name="acct_remarks"></textarea>
                                                     </div>
                                                 </div>
-                                            </div>
+                                                </div>
                                         </div>
 
 
