--- a/Public/new.html
+++ b/Public/new.html
@@ -1,106 +1,89 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Image Upload & Preview</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      text-align: center;
-      padding: 20px;
-    }
-    img {
-      width: 150px;
-      border-radius: 5px;
-      display: block;
-      margin: 10px auto;
-    }
-    button, input {
-      margin-top: 10px;
-      padding: 8px 16px;
-      font-size: 16px;
-      cursor: pointer;
-      border: none;
-      border-radius: 5px;
-    }
-    button {
-      background-color: #007bff;
-      color: white;
-    }
-    input {
-      border: 1px solid #ccc;
-    }
-    .preview {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: rgba(0, 0, 0, 0.8);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      visibility: hidden;
-      opacity: 0;
-      transition: opacity 0.3s ease, visibility 0.3s;
-    }
-    .preview img {
-      width: 80%;
-      max-width: 500px;
-      border-radius: 10px;
-    }
-    .preview.show {
-      visibility: visible;
-      opacity: 1;
-    }
-  </style>
-</head>
-<body>
+<html>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Transaction Alert</title>
+  </head>
+  <body style="margin:0; padding:0; background-color:#f4f4f4;">
+    <table width="100%" cellpadding="0" cellspacing="0" border="0" bgcolor="#f4f4f4">
+      <tr>
+        <td align="center">
+          <table width="100%" cellpadding="0" cellspacing="0" border="0" style="max-width:600px; background:#ffffff; margin:20px auto; border-radius:8px; overflow:hidden; font-family:Arial, sans-serif;">
+            <!-- Header -->
+            <tr>
+              <td bgcolor="#004080" style="padding:20px; text-align:center;">
+                <img src="image/logo.png" alt="UnlimitedFunds Logo" style="max-width:150px;" />
+              </td>
+            </tr>
 
-  <h2>Upload and Preview Image</h2>
-  
-  <input type="file" id="imageInput" accept="image/*">
-  <br>
-  <img id="thumbnail" src="https://via.placeholder.com/150" alt="Thumbnail">
-  <br>
-  <button id="previewBtn" disabled>Preview</button>
-  
-  <div id="previewContainer" class="preview">
-    <img id="previewImage" src="" alt="Preview">
-  </div>
+            <!-- Title -->
+            <tr>
+              <td style="padding:20px;">
+                <h2 style="margin:0; font-size:20px; color:#004080;">Credit Transaction Alert</h2>
+                <p style="margin:10px 0 0; font-size:15px; color:#333;">
+                  Dear <strong>MERCY JORDAN</strong>,<br />
+                  Your account <strong>xxxxxx8947</strong> has been credited with <strong>$1,500.00</strong>.
+                </p>
+              </td>
+            </tr>
 
-  <script>
-    const imageInput = document.getElementById("imageInput");
-    const thumbnail = document.getElementById("thumbnail");
-    const previewBtn = document.getElementById("previewBtn");
-    const previewContainer = document.getElementById("previewContainer");
-    const previewImage = document.getElementById("previewImage");
+            <!-- Transaction Details -->
+            <tr>
+              <td style="padding:20px;">
+                <table width="100%" cellpadding="0" cellspacing="0" border="0" style="background:#f9f9f9; border:1px solid #ddd; border-radius:6px;">
+                  <tr>
+                    <td style="padding:15px;">
+                      <table width="100%" cellpadding="0" cellspacing="0" border="0" style="font-size:14px; color:#333;">
+                        <tr>
+                          <td>Transaction Number:</td>
+                          <td align="right"><strong>#7549783</strong></td>
+                        </tr>
+                        <tr>
+                          <td>Transaction Date:</td>
+                          <td align="right">02/01/2025</td>
+                        </tr>
+                        <tr>
+                          <td>From:</td>
+                          <td align="right">Clare Thombson</td>
+                        </tr>
+                        <tr>
+                          <td>Total Amount:</td>
+                          <td align="right"><strong>$1,500.00</strong></td>
+                        </tr>
+                        <tr>
+                          <td>Payment Method:</td>
+                          <td align="right">Wire Transfer</td>
+                        </tr>
+                      </table>
+                    </td>
+                  </tr>
+                </table>
+              </td>
+            </tr>
 
-    // Handle image upload
-    imageInput.addEventListener("change", function(event) {
-      const file = event.target.files[0];
-      if (file) {
-        const reader = new FileReader();
-        reader.onload = function(e) {
-          thumbnail.src = e.target.result;  // Update thumbnail with uploaded image
-          previewImage.src = e.target.result; // Update preview image
-          previewBtn.disabled = false;  // Enable preview button
-        };
-        reader.readAsDataURL(file);
-      }
-    });
+            <!-- Support Message -->
+            <tr>
+              <td style="padding:20px; font-size:14px; color:#555;">
+                For enquiries, contact our support team at
+                <strong>UnlimitedFundsbank@gmail.com</strong> or call
+                <strong>+311 6384 8274</strong>.<br /><br />
+                Thank you for choosing UnlimitedFunds.
+              </td>
+            </tr>
 
-    // Show preview on button click
-    previewBtn.addEventListener("click", () => {
-      previewContainer.classList.add("show");
-    });
+            <!-- Footer -->
+            <tr>
+              <td bgcolor="#004080" style="padding:20px; text-align:center; color:#fff; font-size:13px;">
+                <strong>UnlimitedFunds Bank Ltd.</strong><br />
+                Secure and innovative banking solutions for your future.<br /><br />
+                &copy; 2025 UnlimitedFunds Bank – All rights reserved.<br />
+                Email: Info@UnlimitedFundsBank.com
+              </td>
+            </tr>
 
-    // Close preview when clicking on the image
-    previewContainer.addEventListener("click", () => {
-      previewContainer.classList.remove("show");
-    });
-  </script>
-
-</body>
+          </table>
+        </td>
+      </tr>
+    </table>
+  </body>
 </html>
